--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,13 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+      fail-fast: false  # This allows other builds to continue if one fails
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4  # Updated to v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5  # Updated to v5
       with:
         python-version: '3.9'
 
@@ -42,7 +43,7 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4  # Updated to v4
 
     - name: Create Release
       id: create_release
@@ -60,9 +61,13 @@ jobs:
 
     - name: Zip artifacts
       run: |
-        zip -r CatPet-Windows.zip CatPet-windows-latest
-        zip -r CatPet-MacOS.zip CatPet-macos-latest
-        zip -r CatPet-Ubuntu.zip CatPet-ubuntu-latest
+        for os in windows-latest macos-latest ubuntu-latest; do
+          if [ -d "CatPet-$os" ]; then
+            zip -r "CatPet-$(echo $os | cut -d'-' -f1 | capitalize).zip" "CatPet-$os"
+          else
+            echo "Directory CatPet-$os not found, skipping..."
+          fi
+        done
 
     - name: Upload Release Assets
       uses: actions/upload-release-asset@v1
@@ -73,6 +78,7 @@ jobs:
         asset_path: ./CatPet-Windows.zip
         asset_name: CatPet-Windows.zip
         asset_content_type: application/zip
+      continue-on-error: true
 
     - name: Upload Release Assets
       uses: actions/upload-release-asset@v1
@@ -80,9 +86,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./CatPet-MacOS.zip
+        asset_path: ./CatPet-Macos.zip
         asset_name: CatPet-MacOS.zip
         asset_content_type: application/zip
+      continue-on-error: true
 
     - name: Upload Release Assets
       uses: actions/upload-release-asset@v1
@@ -93,3 +100,4 @@ jobs:
         asset_path: ./CatPet-Ubuntu.zip
         asset_name: CatPet-Ubuntu.zip
         asset_content_type: application/zip
+      continue-on-error: true
