--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         pip install PyQt6 pyinstaller
 
     - name: Build with PyInstaller
-      run: pyinstaller cat_pet.spec
+      run: pyinstaller --clean cat_pet.spec
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
