--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build Cat Pet Application
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
@@ -29,75 +29,73 @@ jobs:
           pip install PyQt6 pyinstaller
 
       - name: Build with PyInstaller
-        run: pyinstaller --clean cat_pet.spec
+        run: |
+          # PyInstaller configuration (replace with your specific settings)
+          import sys
+          import PyInstaller.config
+
+          PyInstaller.config.CONF['distpath'] = "dist"
+          block_cipher = None
+
+          a = Analysis(['main.py'],
+                      pathex=[],
+                      binaries=[],
+                      datas=[('assets', 'assets')],  # Include the assets folder
+                      hiddenimports=['PyQt6'],
+                      hookspath=[],
+                      hooksconfig={},
+                      runtime_hooks=[],
+                      excludes=[],
+                      win_no_prefer_redirects=False,
+                      win_private_assemblies=False,
+                      cipher=block_cipher,
+                      noarchive=False)
+
+          pyz = PYZ(a.pure, a.zipped_data,
+                      cipher=block_cipher)
+
+          exe = EXE(pyz,
+                      a.scripts,
+                      [],
+                      exclude_binaries=True,
+                      name='CatPet',
+                      debug=False,
+                      bootloader_ignore_signals=False,
+                      strip=False,
+                      upx=True,
+                      console=False,
+                      disable_windowed_traceback=False,
+                      target_arch=None,
+                      codesign_identity=None,
+                      entitlements_file=None)
+
+          coll = COLLECT(exe,
+                          a.binaries,
+                          a.zipfiles,
+                          a.datas,
+                          strip=False,
+                          upx=True,
+                          upx_exclude=[],
+                          name='CatPet')
+
+          # Create a .app bundle for macOS
+          if sys.platform == 'darwin':
+              app = BUNDLE(coll,
+                              name='CatPet.app',
+                              icon=None,  # Replace with 'path/to/your/icon.icns' if you have an icon file
+                              bundle_identifier='com.yourdomain.catpet',
+                              info_plist={
+                                  'CFBundleName': 'Cat Pet',
+                                  'CFBundleDisplayName': 'Cat Pet',
+                                  'CFBundleGetInfoString': "Cat Pet Desktop Application",
+                                  'CFBundleVersion': "1.0.0",
+                                  'CFBundleShortVersionString': "1.0.0",
+                                  'NSHighResolutionCapable': True,
+                                  'NSRequiresAquaSystemAppearance': False,  # For dark mode support
+                              })
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4  # Updated to v4
         with:
           name: CatPet-${{ matrix.os }}
           path: dist/CatPet
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
-    steps:
-      - uses: actions/checkout@v4  # Updated to v4
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        with:
-          tag_name: v${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-          draft: false
-          prerelease: false
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v4  # Updated to v4
-
-      - name: Zip artifacts
-        run: |
-          for os in windows-latest macos-latest ubuntu-latest; do
-            if [ -d "CatPet-$os" ]; then
-              zip -r "CatPet-$(echo $os | cut -d'-' -f1 | tr '[:lower:]' '[:upper:]').zip" "CatPet-$os"
-            else
-              echo "Directory CatPet-$os not found, skipping..."
-            fi
-          done
-
-      - name: Upload Release Assets
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./CatPet-Windows.zip
-          asset_name: CatPet-Windows.zip
-          asset_content_type: application/zip
-        continue-on-error: true
-
-      - name: Upload Release Assets (MacOS)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./CatPet-MacOS.zip
-          asset_name: CatPet-MacOS.zip
-          asset_content_type: application/zip
-        continue-on-error: true
-
-      - name: Upload Release Assets (Ubuntu)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./CatPet-Ubuntu.zip
-          asset_name: CatPet-Ubuntu.zip
-          asset_content_type: application/zip
-        continue-on-error: true
