--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4  # Updated to v4
+      
+      - name: Install X Server (for Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt install xorg
+
+      - name: Start X Server
+        run: startx
 
       - name: Set up Python
         uses: actions/setup-python@v5  # Updated to v5
