--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install PyQt6 pyinstaller
+
       - name: Build with PyInstaller
-        run: pyinstaller --clean cat_pet.spec
+        run: |
+          python -m pyinstaller --onefile main.py
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4  # Updated to v4
@@ -60,7 +62,7 @@ jobs:
 
       - name: Zip artifacts
         run: |
-          for os in windows-latest macos-latest; do  # Only consider Windows and macOS
+          for os in windows-latest macos-latest ubuntu-latest; do
             if [ -d "CatPet-$os" ]; then
               zip -r "CatPet-$(echo $os | cut -d'-' -f1 | tr '[:lower:]' '[:upper:]').zip" "CatPet-$os"
             else
@@ -74,7 +76,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/CatPet-Windows.zip  # Assuming zip files are in 'dist' directory
+          asset_path: ./dist/CatPet-Windows.zip
           asset_name: CatPet-Windows.zip
           asset_content_type: application/zip
         continue-on-error: true  # Continue even if upload fails
@@ -85,7 +87,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/CatPet-MacOS.zip  # Assuming zip files are in 'dist' directory
+          asset_path: ./dist/CatPet-MacOS.zip
           asset_name: CatPet-MacOS.zip
           asset_content_type: application/zip
         continue-on-error: true  # Continue even if upload fails
