--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           pip install PyQt6 pyinstaller
 
       - name: Build with PyInstaller
-        run: pyinstaller --onefile main.py
+        run: pyinstaller --distpath dist --onefile main.py
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4  # Updated to v4
