--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+
 name: Build Cat Pet Application
 
 on:
@@ -9,7 +10,7 @@ on:
 jobs:
   build:
     name: Build on ${{ matrix.os }}
-    runs-on: [self-hosted]
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [windows-latest, macos-latest]
@@ -27,15 +28,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install PyQt6 pyinstaller
-
       - name: Build with PyInstaller
-        run: pyinstaller --distpath dist/KIND --onefile main.py
+        run: pyinstaller --distpath dist/CatPet --onefile main.py
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4  # Updated to v4
         with:
-          name: KIND-${{ matrix.os }}
-          path: dist/KIND
+          name: CatPet-${{ matrix.os }}
+          path: dist/CatPet
 
   release:
     needs: build
@@ -62,21 +62,20 @@ jobs:
       - name: Zip artifacts
         run: |
           for os in windows-latest macos-latest; do  # Only consider Windows and macOS
-            if [ -d "KIND-$os" ]; then
-              zip -r "KIND-$(echo $os | cut -d'-' -f1 | tr '[:lower:]' '[:upper:]').zip" "KIND-$os"
+            if [ -d "CatPet-$os" ]; then
+              zip -r "CatPet-$(echo $os | cut -d'-' -f1 | tr '[:lower:]' '[:upper:]').zip" "CatPet-$os"
             else
-              echo "Directory KIND-$os not found, skipping..."
+              echo "Directory CatPet-$os not found, skipping..."
             fi
           done
-
       - name: Upload Release Assets (using latest version, with error handling)
         uses: actions/upload-release-asset@latest  # Update to latest version
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/KIND-Windows.zip
-          asset_name: KIND-Windows.zip
+          asset_path: ./dist/CatPet-Windows.zip
+          asset_name: CatPet-Windows.zip
           asset_content_type: application/zip
 
       - name: Upload Release Assets (MacOS) (using latest version, with error handling)
@@ -85,6 +84,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/KIND-MacOS.zip
-          asset_name: KIND-MacOS.zip
+          asset_path: ./dist/CatPet-MacOS.zip
+          asset_name: CatPet-MacOS.zip
           asset_content_type: application/zip
