--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,9 +98,13 @@ jobs:
           if (Test-Path $assetPath) {
             Write-Output "Uploading $assetName"
             $uploadUrl = "${{ needs.create_release.outputs.upload_url }}".Replace('{?name,label}', "?name=$assetName")
-            curl.exe -X POST -H "Authorization: token $env:GITHUB_TOKEN" -H "Content-Type: application/zip" -F "file=@$assetPath" $uploadUrl
+            if ("${{ runner.os }}" -eq "Windows") {
+              curl.exe -X POST -H "Authorization: token $env:GITHUB_TOKEN" -H "Content-Type: application/zip" -F "file=@$assetPath" $uploadUrl
+            } else {
+              curl -X POST -H "Authorization: token $env:GITHUB_TOKEN" -H "Content-Type: application/zip" -F "file=@$assetPath" $uploadUrl
+            }
           } else {
             Write-Error "Asset file not found: $assetPath"
             exit 1
           }
-        shell: pwsh
+        shell: pwsh        shell: pwsh
