--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,25 +27,23 @@ jobs:
       - name: Build with PyInstaller (Windows)
         if: runner.os == 'Windows'
         run: |
-          pyinstaller --name=KIND --windowed --onefile main.py
+          pyinstaller --name=KIND --windowed --onefile --add-data "assets;assets" main.py
         shell: pwsh
       - name: Build with PyInstaller (macOS)
         if: runner.os == 'macOS'
         run: |
-          pyinstaller --name=KIND --windowed --onefile main.py
-          mv dist/KIND dist/KIND.app
+          pyinstaller --name=KIND --windowed --onefile --add-data "assets:assets" main.py
         shell: bash
       - name: Zip artifacts (Windows)
         if: runner.os == 'Windows'
         run: |
-          Compress-Archive -Path .\dist\KIND.exe -DestinationPath KIND-Windows.zip
+          Compress-Archive -Path .\dist\KIND.exe, .\assets -DestinationPath KIND-Windows.zip
         shell: pwsh
       - name: Zip artifacts (macOS)
         if: runner.os == 'macOS'
         run: |
-          zip -r KIND-macOS.zip dist/KIND.app
-        shell: bash
-      - name: Upload artifacts
+          zip -r KIND-macOS.zip dist/KIND.app assets
+        shell: bash      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: KIND-${{ runner.os }}
