--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,22 +27,27 @@ jobs:
       - name: Build with PyInstaller (Windows)
         if: runner.os == 'Windows'
         run: |
-          pyinstaller --name=KIND --windowed --onefile --add-data "assets;assets" main.py
+          pyinstaller --name=KIND --windowed --onefile --add-data "assets;assets" --hidden-import PyQt6 main.py
+          Copy-Item -Path "assets" -Destination "dist\assets" -Recurse
         shell: pwsh
+
       - name: Build with PyInstaller (macOS)
         if: runner.os == 'macOS'
         run: |
-          pyinstaller --name=KIND --windowed --onefile --add-data "assets:assets" main.py
+          pyinstaller --name=KIND --windowed --onefile --add-data "assets:assets" --hidden-import PyQt6 main.py
+          cp -R assets dist/KIND.app/Contents/MacOS/
         shell: bash
+
       - name: Zip artifacts (Windows)
         if: runner.os == 'Windows'
         run: |
-          Compress-Archive -Path .\dist\KIND.exe, .\assets -DestinationPath KIND-Windows.zip
+          Compress-Archive -Path .\dist\* -DestinationPath KIND-Windows.zip
         shell: pwsh
+
       - name: Zip artifacts (macOS)
         if: runner.os == 'macOS'
         run: |
-          zip -r KIND-macOS.zip dist/KIND.app assets
+          cd dist && zip -r ../KIND-macOS.zip *
         shell: bash      
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
